academia-profesional/proyecto-16-kubernetes/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: academia
  labels:
    app: academia-profesional
