academia-profesional/proyecto-16-kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: academia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: academia.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: backend-service, port: { number: 8080 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend-service, port: { number: 80 } }
